# fastapi-async-db

./: README.md  pyproject.toml  tox.ini
app/: dependencies.py  initial_data.py  main.py  utils.py
app/api/: hello.py  login.py  logout.py  post.py  user.py
app/core/: config.py  security.py
app/crud/: crud_post.py  crud_user.py
app/db/: init_db.py  session.py
app/models/: article.py  base.py  user.py
app/schemas/: article.py  token.py  user.py
requirements/: dev.txt  prod.txt
tests/: conftest.py
tests/crud/: test_user.py
tests/routers/: test_login.py  test_user.py
tests/utils/: user.py
