[tool.poetry]
name = "fastapi-async-db"
version = "0.1.0"
description = ""
authors = ["carol <awdrg1210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
databases = {version = "^0.5.3", extras = ["sqlite"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.5"
ormar = {version = "^0.10.23", extras = ["sqlite"]}
python-dotenv = "^0.19.2"
colorlog = "^6.6.0"

[tool.poetry.dev-dependencies]
httpx = "^0.21.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
tox-poetry = "^0.4.1"
pytest-dotenv = "^0.5.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
